--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -245,3 +245,44 @@
 .no-history > div:last-child {
   font-size: 12px;
 }
+
+
+@media (max-width: 446px) {
+  .sidebar-container {
+    width: 140px;
+    flex-direction: column;
+  }
+  .navigation-sidebar {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .drone-list-sidebar {
+    width: 100%;
+    padding: 0px;
+    max-height: calc(100vh - 60px); 
+    overflow-y: auto; 
+  }
+
+  .drones-list {
+    max-height: calc(100vh - 120px); 
+    overflow-y: auto;
+    padding: 0px;
+  }
+  .drone-name {
+    font-size: 14px;
+    word-break: break-word;
+  }
+  .drone-info-grid {
+    grid-template-columns: 1fr;
+    gap: 4px;
+    font-size: 10px;
+    
+  }
+  .subtab-buttons {
+    gap: 12px;
+  }
+  .toggle-label {
+    font-size: 8px;
+  }
+}
